[package]
name = "refl"
version = "0.1.0"
edition = "2021"

[dependencies]
cstree = { version = "0.12.0", features = ["derive", "lasso_compat", "multi_threaded_interning"] }
logos = "0.13.0"
ordered-float = "3.7.0"
text-size = "1.1.0"

[build-dependencies]
prettyplease = "0.2.4"
proc-macro2 = "1.0.64"
quote = "1.0.26"
syn = { version = "2", default-features = false, features = ["full", "parsing"] }
ungrammar = "1.16.1"
